--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ja">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -7,7 +7,19 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono:700|Fira+Sans:400,400i,700,700i&subset=latin-ext">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.1.2/css/bulma.min.css">
+
+  <style>
+    body {
+      font-family: 'Fira Sans', "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
+    }
+    .counter .tag {
+      margin-left: 8px;
+      font-family: 'Fira Mono', monospace;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
 
@@ -30,9 +42,7 @@
 
   <main>
     <section class="section">
-      <div class="container">
-        <p>main contents</p>
-      </div>
+      <div id="content" class="container"></div>
     </section>
   </main>
 
