Add count (down | reset) buttons

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,13 @@
       font-family: 'Fira Sans', "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
     }
     .counter .tag {
-      margin-left: 8px;
+      margin-left: 4px;
       font-family: 'Fira Mono', monospace;
       font-weight: bold;
+    }
+
+    .counter .button {
+      margin-right: 4px;
     }
   </style>
 </head>
